# password-manager

./: Cargo.toml
data/: datas.json
src/: main.rs  models.rs  navigation.rs  prompts.rs
