[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-crypt = "3.1.12"
cli-clipboard = "0.4.0"
rpassword = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
clipboard = "0.5.0"
